--- a/templates/faqs.html
+++ b/templates/faqs.html
@@ -60,11 +60,10 @@
         /* Menu toggle button for mobile */
         nav .menu-toggle {
             display: none;
-            background-color: #3498db;
+            font-size: 1.5rem;
             color: #fff;
+            background: none;
             border: none;
-            padding: 10px 20px;
-            border-radius: 5px;
             cursor: pointer;
         }
 
@@ -87,13 +86,14 @@
 
             nav .menu-toggle {
                 display: block;
+                margin-left: auto;
+                padding-right: 20px;
             }
 
             nav .logo {
                 margin-right: auto;
             }
         }
-
 
         nav ul {
             list-style: none;
@@ -167,8 +167,8 @@
 <body>
 
     <nav>
-        <button class="menu-toggle" onclick="toggleMenu()">Menu</button>
         <a href="{{ url_for('landing_page') }}" class="logo">Recipe Generator</a>
+        <button class="menu-toggle" onclick="toggleMenu()">&#9776;</button>
         <ul class="menu">
             <li><a href="{{ url_for('about') }}">About</a></li>
             <li><a href="{{ url_for('contact') }}">Contact</a></li>
