--- a/templates/login.html
+++ b/templates/login.html
@@ -206,6 +206,7 @@
             <input type="password" name="password" placeholder="Password" required>
             <button type="submit">Login</button>
             <a href="{{ url_for('signup') }}">Don't have an account? Sign up</a>
+            <a href="{{ url_for('forgot_password') }}">Forgot Password?</a> <!-- Forgot Password link -->
         </form>
     </div>
 
